<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>feetech_servo_bringup</name>
  <version>0.0.0</version>
  <description>Bringup for Feetech Servo testing</description>
  <maintainer email="nibanovic@gmail.com">Nikola Banovic</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>feetech_servo_hardware_interface</depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>